--- a/index.html
+++ b/index.html
@@ -29,9 +29,19 @@
   </style>
 </head>
 <body class="gradient-background">
-  <div class="flex items-center justify-center h-screen">
+  <!-- First section with dddd.jpg -->
+  <div class="flex flex-col items-center justify-center h-screen" id="introSection">
+    <img src="./images/shiba-cute.gif" alt="Dog with rose" class="rounded-md w-[500px] h-auto shadow-lg mb-6" id="imageDisplay">
+    <button id="nextButton"
+      class="inline-flex items-center justify-center rounded-md text-[20px] font-medium transition hover:bg-blue-700 h-12 px-6 py-2 bg-blue-500 text-white">
+      Next
+    </button>
+  </div>
+
+  <!-- Main section with image1.gif -->
+  <div class="flex items-center justify-center h-screen hidden" id="mainSection">
     <div class="flex flex-col items-center p-4">
-      <img id="imageDisplay" src="./images/image1.gif" alt="Cute kitten with flowers" class="rounded-md h-[300px]" style="object-fit: cover;" />
+      <img id="imageDisplay2" src="./images/image1.gif" alt="Cute kitten with flowers" class="rounded-md h-[300px]" style="object-fit: cover;" />
       <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Will you be my Valentine?</h2>
       <div class="flex gap-4 pt-[20px] items-center" id="responseButtons">
         <button id="yesButton"
@@ -48,9 +58,15 @@
 
   <script type="module">
     import confetti from 'https://cdn.skypack.dev/canvas-confetti';
+
+    // Elements
+    const nextButton = document.getElementById('nextButton');
+    const introSection = document.getElementById('introSection');
+    const mainSection = document.getElementById('mainSection');
     const yesButton = document.getElementById('yesButton');
     const noButton = document.getElementById('noButton');
     const imageDisplay = document.getElementById('imageDisplay');
+    const imageDisplay2 = document.getElementById('imageDisplay2');
     const valentineQuestion = document.getElementById('valentineQuestion');
     const responseButtons = document.getElementById('responseButtons');
   
@@ -67,25 +83,67 @@
       "./images/image6.gif",
       "./images/image7.gif"
     ];
+
+    // Function to make the "No" button blink and pop at random places except over the image
+    function blinkNoButton() {
+      const imageRect = imageDisplay.getBoundingClientRect(); // Get the bounding box of the image
+      const imageTop = imageRect.top;
+      const imageBottom = imageRect.bottom;
+      const imageLeft = imageRect.left;
+      const imageRight = imageRect.right;
+
+      setInterval(() => {
+        // Get the screen dimensions
+        const screenWidth = window.innerWidth;
+        const screenHeight = window.innerHeight;
+
+        // Generate random positions for the button
+        let randomLeft = Math.random() * (screenWidth - noButton.offsetWidth);
+        let randomTop = Math.random() * (screenHeight - noButton.offsetHeight);
+
+        // Ensure the button is not inside the image area
+        while (randomLeft >= imageLeft && randomLeft <= imageRight && randomTop >= imageTop && randomTop <= imageBottom) {
+          randomLeft = Math.random() * (screenWidth - noButton.offsetWidth);
+          randomTop = Math.random() * (screenHeight - noButton.offsetHeight);
+        }
+
+        // Set the random position
+        noButton.style.position = 'absolute';
+        noButton.style.left = `${randomLeft}px`;
+        noButton.style.top = `${randomTop}px`;
+
+        // Toggle the button visibility
+        noButton.style.visibility = (noButton.style.visibility === 'hidden') ? 'visible' : 'hidden';
+      }, 500); // 500 milliseconds (0.5 seconds)
+    }
+
+    // Add "Next" button functionality
+    nextButton.addEventListener('click', () => {
+      introSection.style.display = 'none'; // Hide intro section
+      mainSection.style.display = 'flex'; // Show main section
+      blinkNoButton(); // Start the blinking effect on the "No" button
+    });
   
+    // Add "No" button functionality
     noButton.addEventListener('click', function() {
       if (noClickCount < 5) {
         noClickCount++;
-        imageDisplay.src = imagePaths[noClickCount];
+        imageDisplay2.src = imagePaths[noClickCount];
         buttonHeight += 35; // Increase height by 5px on each click
         buttonWidth += 35;
-        fontSize += 25; // Increase font size by 1px on each click
+        fontSize += 25; // Increase font size by 1px on each click  
         yesButton.style.height = `${buttonHeight}px`; // Update button height
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; // Update font size
         if (noClickCount < 6) {
-          noButton.textContent = ["No", "Are you sure?", "Pookie please", "Don't do this to me :(", "You're breaking my heart", "I'm gonna cry..."][noClickCount];
+          noButton.textContent = ["No", "Are you sure?", "BAWAL MO NO", "BALA KAAAAA :(", "SGE JUD DORAAAAA", ":p", ""][noClickCount];
         }
       }
     });
   
+    // Add "Yes" button functionality
     yesButton.addEventListener('click', () => {
-      imageDisplay.src = './images/image7.gif'; // Change to image7.gif
+      imageDisplay2.src = './images/image7.gif'; // Change to image7.gif
       valentineQuestion.textContent = "Yayyy!! :3"; // Change the question text
       responseButtons.style.display = 'none'; // Hide both buttons
       confetti(); // Trigger confetti animation
